[package]
name = "oblivious_sorting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
secret_sharing_utils = { path = "../secret_sharing_utils" }

serde = { version = "1.0", features = ["derive"] } # MIT or Apache-2.0
bincode = "1.3.3" # MIT