[package]
name = "oblivious_shuffling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
replicatedsecretsharing = { path = "../replicatedsecretsharing" }
serde = { version = "1.0", features = ["derive"] } # MIT or Apache-2.0
bincode = "1.3.3" # MIT
rand_chacha = "0.3.1"
